Fixing and cleaning